@@ -1,10 +1,13 @@
 1999-01-22  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
+
 	* win32dib.c (dib_augmentPalette): Store to rgb array because
 	the drawing routines need this info, even in 24 bit mode.
 
 	* internal.m (tkobjc_raster_copy): Don't free old pixmap (X11 case).
 	(tkobjc_raster_setColormap): Raise a warning if colormap is nil.
+	If unnet, set eraseColor to black before augmenting palette;
+	avoid gratuitous duplication in win32dib palette.
 
 	* internal.[hm] (tkobjc_raster_dropOldPixmap): New function.
 
